eslint, prettier, schema update, etc
